testdata/invalid/internal/domain/order/core/bad_errors.go
package core

// VIOLATION: core imports app (reverse dependency)
import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/order/app"
